compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__bit_string_float.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 142
expression: "case <<1>> { <<a:float>> if a > 1 -> 1 }"

---
error: Type mismatch
  ┌─ /src/one/two.gleam:1:29
  │
1 │ case <<1>> { <<a:float>> if a > 1 -> 1 }
  │                             ^

Expected type:

    Int

Found type:

    Float


